--- a/foundry.toml
+++ b/foundry.toml
@@ -3,5 +3,6 @@ src = "src"
 out = "out"
 libs = ["lib"]
 remappings = ["@account-abstraction/=lib/account-abstraction/", "@openzeppelin/=lib/openzeppelin-contracts/"]
+via-ir = true
 
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
